style.css
@font-face {
    font-family: "calculator-font";
    src: url("./digital-7/digital-7.ttf");
}

body {
    height: 100vh;
    background-color: bisque;
    display: flex;
    align-items: center;
    justify-content: center;
}

#calculator {
    height: 470px;
    width: 375px;
    background-color: rgb(40, 40, 40);
    padding-top: 20px;
    border: 3px solid rgb(31, 30, 30);
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    box-shadow: 3px 5px 3px 1px rgb(31, 30, 30);
}

#screen {
    height: 80px;
    width: 330px;
    background-color: rgb(128, 175, 128);
    border: 2px solid rgb(39, 44, 39);
    border-radius: 8px;
    box-shadow: 2px 5px 3px 1px rgb(65, 93, 65) inset;
    font-family: "calculator-font";
}

#expression {
    height: 32px;
    width: 330px;
    box-sizing: border-box;
    padding-right: 5px;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    color: rgb(53, 52, 52);
    font-size: 1.3rem;
}

#answer {
    height: 48px;
    width: 330px;
    box-sizing: border-box;
    padding-right: 5px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    color: rgb(0, 0, 0);
    font-size: 2.5rem;
}

#calc-btns {
    height: 345px;
    width: 330px;
    background-color: rgb(48, 48, 48);
    padding: 5px;
    border-radius: 5px;
    display: flex;
}

.column {
    height: inherit;
    width: 25%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.smallBtn, .bigBtn {
    height: 17%;
    width: 90%;
    background-color: rgb(23, 23, 23);
    box-sizing: border-box;
    border: 1px solid black;
    border-radius: 8px;
    box-shadow: 2px 2px 0px 0px rgb(26, 24, 24), 
                            2px 5px 3px 1px rgb(41, 41, 41) inset;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 
                            'Lucida Sans', Arial, sans-serif;
    font-size: 1.3rem;
    font-weight: 650;
    cursor: pointer;
}

.bigBtn {
    height: 36.5%;
}

.smallBtn:hover, .bigBtn:hover {
    background-color: rgb(27, 27, 27);
}
.smallBtn:active, .bigBtn:active {
    transform: scale(0.97);
    transform-origin: bottom right;
    transition: 0.075s ease-out;
    box-shadow: 1.8px 1.8px 0px 0px rgb(22, 24, 24), 
                            2px 5px 3px 1px rgb(41, 41, 41) inset;
}

.deleteButtons {
    border: 1px solid rgb(78, 10, 10);
    background-color: rgb(166, 16, 16);
    box-shadow: 2px 2px 0px 0px rgb(115, 16, 16), 
                            2px 5px 3px 1px rgb(204, 60, 60) inset;
}

.deleteButtons:hover {
    background-color: rgb(180, 31, 31);
}

.deleteButtons:active {
    box-shadow: 1.8px 1.8px 0px 0px rgb(111, 16, 16), 
                            2px 5px 3px 1px rgb(204, 60, 60) inset;
}

.equals:hover {
    border: 1px solid rgb(9, 63, 5);
    background-color: rgb(26, 169, 16);
    box-shadow: 2px 2px 0px 0px rgb(12, 89, 7), 
                            2px 5px 3px 1px rgb(60, 201, 49) inset;
}

.equals:active {
    box-shadow: 1.8px 1.8px 0px 0px rgb(7, 79, 8), 
                            2px 5px 3px 1px rgb(60, 201, 49) inset;
}

.operations:hover {
    border: 1px solid rgb(5, 30, 63);
    background-color: rgb(16, 75, 169);
    box-shadow: 2px 2px 0px 0px rgb(7, 40, 89), 
                            2px 5px 3px 1px rgb(39, 107, 179) inset;
}

.operations:active {
    box-shadow: 1.8px 1.8px 0px 0px rgb(2, 40, 89), 
                            2px 5px 3px 1px rgb(39, 107, 179) inset;
}

